--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.0.0",
     "axios": "^0.19.2",
     "file-saver": "^2.0.2",
+    "for-editor": "^0.3.5",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
