--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         SSH_PRIVATE_KEY: ${{ secrets.TOKEN  }}
         ARGS: "-avzr --delete"
-        SOURCE: "build/"
+        SOURCE: "src/"
         REMOTE_HOST: ${{ secrets.HOST  }}
         REMOTE_USER: ${{ secrets.USER  }}
         TARGET: "/usr/local/nginx/html/blog-admin"
