--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -16,14 +16,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: yarn install
+    - run: yarn build
       env:
-        CI: true 
+        CI: true
     - name: Deoploy to Server
       uses: easingthemes/ssh-deploy@v2.0.7
       env:
         SSH_PRIVATE_KEY: ${{ secrets.TOKEN  }}
         ARGS: "-avzr --delete"
-        SOURCE: "src/"
+        SOURCE: "build/"
         REMOTE_HOST: ${{ secrets.HOST  }}
         REMOTE_USER: ${{ secrets.USER  }}
         TARGET: "/usr/local/nginx/html/blog-admin"
