--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "antd": "^4.0.0",
     "axios": "^0.19.2",
     "file-saver": "^2.0.2",
+    "font-awesome": "^4.7.0",
     "for-editor": "^0.3.5",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
