--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.0.0",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "for-editor": "^0.3.5",
+    "history": "^5.0.0",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
