--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "for-editor": "^0.3.5",
-    "history": "^5.0.0",
+    "history": "4.10.1",
     "js-cookie": "^2.2.1",
+    "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
