--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "history": "4.10.1",
     "js-cookie": "^2.2.1",
     "leaflet": "^1.6.0",
+    "leaflet.awesome-markers": "^2.0.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
