--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.1",
     "leaflet": "^1.6.0",
     "leaflet.awesome-markers": "^2.0.5",
+    "leaflet.vectorgrid": "^1.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
